@@ -1,7 +1,7 @@
 #!/usr/bin/env bash
 # ----------------------------------------------------------------------------
 # RemoteSupportTool for staff members
-# Copyright (C) 2015-2018 OpenIndex.de
+# Copyright 2015-2019 OpenIndex.de
 # ----------------------------------------------------------------------------
 
 # Use a specific command to launch the Java Runtime Environment.
@@ -18,41 +18,42 @@ JAVA_OPTS="-Dfile.encoding=UTF-8"
 APP="de.openindex.support.staff/de.openindex.support.staff.StaffApplication"
 
 # Detect directories.
-SCRIPT_DIR=$( cd $( dirname ${BASH_SOURCE[0]} ) && pwd )
-BASE_DIR=$( cd $( dirname ${SCRIPT_DIR} ) && pwd )
+SCRIPT_DIR="$( cd "$( dirname "${BASH_SOURCE[0]}" )" && pwd )"
+BASE_DIR="$( cd "$( dirname "$SCRIPT_DIR" )" && pwd )"
 
 # OS specific initialization.
 SYSTEM="$( uname -s )"
 case "$SYSTEM" in
 
-  Darwin)
-    echo "Initializing macOS environment..."
-    JAVA_OPTS="$JAVA_OPTS -Dapple.laf.useScreenMenuBar=true"
-    JAVA_OPTS="$JAVA_OPTS -Xdock:name=StaffSupportTool"
-    JAVA_OPTS="$JAVA_OPTS -Xdock:icon=./share/icon.icns"
-    ;;
+    Darwin)
+        echo "Initializing macOS environment..."
+        JAVA_OPTS="$JAVA_OPTS -Dapple.laf.useScreenMenuBar=true"
+        JAVA_OPTS="$JAVA_OPTS -Xdock:name=StaffSupportTool"
+        JAVA_OPTS="$JAVA_OPTS -Xdock:icon=./share/icon.icns"
+        ;;
 
-  Linux)
-    echo "Initializing Linux environment..."
-    ;;
+    Linux)
+        echo "Initializing Linux environment..."
+        JAVA_OPTS="$JAVA_OPTS --add-opens java.desktop/sun.awt.X11=de.openindex.support.core"
+        ;;
 
-  *)
-    echo "Initializing unknown environment ($SYSTEM)..."
-    ;;
+    *)
+        echo "Initializing unknown environment ($SYSTEM)..."
+        ;;
 
 esac
 
 # Use bundled Java runtime environment, if no JAVA variable was specified.
-if [ -z ${JAVA} ] ; then
-  JAVA=${BASE_DIR}/bin/java
+if [[ -z "$JAVA" ]] ; then
+    JAVA="$BASE_DIR/bin/java"
 fi
 
 # Launch the application.
-cd ${BASE_DIR}
-exec ${JAVA} \
-  -Xms${JAVA_HEAP_MINIMUM} \
-  -Xmx${JAVA_HEAP_MAXIMUM} \
-  ${JAVA_OPTS} \
-  -p "modules" \
-  -m ${APP} \
-  "$@"
+cd "$BASE_DIR"
+exec "$JAVA" \
+    -Xms${JAVA_HEAP_MINIMUM} \
+    -Xmx${JAVA_HEAP_MAXIMUM} \
+    ${JAVA_OPTS} \
+    -p "modules" \
+    -m "$APP" \
+    "$@"
